[package]
name = "dennis"
version = "0.1.0"
edition = "2021"

[dependencies]
arbitrary-int = "1.2.7"
bitbybit = "1.3.2"
futures = "0.3.31"
tokio = { version = "1.41.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["codec", "net"] }
winnow = "0.6.20"

[dev-dependencies]
hex-literal = "0.4.1"
pretty_assertions = "1.4.1"
